# digitalmails

./: CLAUDE.md  Cargo.toml
crates/dm-core/: Cargo.toml
crates/dm-core/src/: identity.rs  lib.rs  prekeys.rs  ratchet.rs  x3dh.rs
plans/: agentic-development-01-orchestration-workflow.md  agentic-development-02-tdd-and-scaffolding.md  agentic-development-03-agent-delegation-guide.md  agentic-development-04-human-in-the-loop-guide.md  appendix_app_chain.md  architecture.md  handoff.md  llm-agent-best-practices.md  monetization-infrastructure-plan.md  multi-device-sync-plan.md  prd.md
