[package]
name = "dm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
hex = "0.4"
